@@ -189,7 +189,6 @@ sub import {
             die "$FILTER_MODULE required with :resurrect" .
                 "(install from CPAN)";
         }
-        eval "require $FILTER_MODULE" or die "Cannot pull in $FILTER_MODULE";
         Filter::Util::Call::filter_add(
             sub {
                 my($status);
